<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Héctor de Isidro - hrules6872
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.percent.PercentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentBackground"
    >

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      app:layout_marginBottomPercent="15%"
      app:layout_marginLeftPercent="10%"
      app:layout_marginRightPercent="10%"
      app:layout_marginTopPercent="15%"
      >

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
      <ImageView
          android:id="@+id/logo"
          android:layout_centerHorizontal="true"
          android:src="@drawable/ic_logo"
          app:layout_heightPercent="30%"
          app:layout_widthPercent="50%"
          tools:ignore="ContentDescription"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/logo"
          android:gravity="center"
          android:text="@string/app_name"
          android:textAllCaps="true"
          style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
          />

      <com.hrules.gitego.presentation.commons.components.UnderlineTextView
          android:id="@+id/about"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:clickable="true"
          android:text="@string/login_about"
          android:textAppearance="?android:attr/textAppearanceSmall"
          app:layout_marginBottomPercent="10%"
          />

      <Button
          android:id="@+id/login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_above="@id/about"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/login_login"
          android:textAllCaps="true"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/textHighlighted"
          android:textStyle="bold"
          style="@style/Widget.AppCompat.Button.Borderless"
          />

    </android.support.percent.PercentRelativeLayout>
  </android.support.v7.widget.CardView>
</android.support.percent.PercentFrameLayout>
